# DaoHouse

./: Cargo.toml  LICENSE  README.md  abccanister_ids.json  assets_upload.sh  bun.lockb  canister_ids.json  dao_backup.txt  deploy_local.sh  deploy_main.sh  dfx.json  generate_did.sh  ledger.sh  local.sh  lol.sh  main.sh  main_deployment.sh  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  test_dao.sh  testing_daohouse.sh  wasm.sh
deleteFolder/: dao_new.sh  main_dao.sh
deploymentScripts/: assets_upload.sh  delete.sh  deploy_local.sh  deploy_main.sh  main_asset.sh
scripts/: assign_controller.sh  generate2.sh  generate_did.sh
src/dao_canister/: Cargo.toml  dao_canister.did  old.did
src/dao_canister/src/: functions.rs  guards.rs  lib.rs  memory.rs  proposal_functions.rs  proposal_route.rs  state_handler.rs  types.rs  upgrade.rs  utils.rs
src/dao_canister/src/functions/: dao_functions.rs  ledger_functions.rs  proposal_functions.rs
src/dao_canister/src/proposal_route/: dao_controllers.rs  proposal_controller.rs
src/daohouse_backend/: Cargo.toml  daohouse_backend.did  old.did
src/daohouse_backend/src/: functions.rs  guards.rs  lib.rs  memory.rs  routes.rs  state_handler.rs  testing.rs  types.rs  upgrade.rs  user_route.rs  utils.rs
src/daohouse_backend/src/functions/: canister_factory.rs  canister_functions.rs  dao_canister.wasm  ledger_functions.rs  post_route.rs  proposal_routes.rs  user_route.rs
src/daohouse_backend/src/routes/: backup-dao.txt  dao_controller.rs  management_canister_controller.rs  post_controller.rs  proposal_controllers.rs  user_controller.rs
(+181 files in other folders)
